# juce-end-to-end

./: .babelrc  .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  dependabot.yml  eslint.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  pull-request.md  pull_request_template.md
.github/actions/install-ninja/: action.yml
.github/actions/install-sccache/: action.yml
.github/workflows/: build-and-test-pr.yml  npm-piblish.yml  npm-publish.yml
app/: CMakeLists.txt
app/include/ampify/e2e/: Command.h  ComponentSearch.h  Event.h  Response.h  TestCentre.h
app/source/: Command.cpp  ComponentSearch.cpp  DefaultCommandHandler.cpp  Event.cpp  Response.cpp  TestCentre.cpp
app/source/ampify/e2e/: ClickableComponent.h  Command.cpp  Command.h  CommandHandler.h  ComponentSearch.cpp  ComponentSearch.h  Connection.cpp  Connection.h  DefaultCommandHandler.cpp  DefaultCommandHandler.h  Event.cpp  Event.h  KeyPress.cpp  Response.cpp  Response.h  TestCentre.cpp  TestCentre.h
app/tests/: TestCommand.cpp  TestResponse.cpp
cmake/: AmpifyE2EConfig.cmake  FocusriteE2EConfig.cmake  fetch-catch2.cmake  fetch-juce.cmake  replace-default-vs-variables.cmake  set_common_target_properties.cmake
documentation/: building.md  cmake.md  cplusplus.md  help.js  integration-guide.md  javascript.md  scripts.md
example/app/: CMakeLists.txt
example/app/source/: Application.h  CustomCommandHandler.h  Main.cpp  MainComponent.h  MainWindow.h
example/tests/: accessibility.spec.ts  app-path.ts  counter-app.spec.ts  failure-modes.spec.ts
scripts/: build-cpp-library.ts  create-lib.js  generate.ts  release.js  release.ts
scripts/lib/: configuration.ts  directory.ts  git.js  git.ts  github.js  github.ts  paths.js  paths.ts  platform.js  platform.ts
source/: app-connection.ts  binary-protocol.ts  commands.ts  connection.ts  constants.ts  e2e-controller.ts  index.ts  response-stream.ts  responses.ts  run.ts  server.ts  studio-connection.ts
source/cpp/: CMakeLists.txt
source/cpp/include/ampify/e2e/: CommandHandler.h  ComponentSearch.h  Event.h  Response.h  TestCentre.h
source/cpp/include/focusrite/e2e/: ClickableComponent.h  Command.h  CommandHandler.h  ComponentSearch.h  Event.h  Log.h  Response.h  TestCentre.h
source/cpp/source/: Command.cpp  ComponentSearch.cpp  Connection.cpp  Connection.h  DefaultCommandHandler.cpp  DefaultCommandHandler.h  Event.cpp  KeyPress.cpp  KeyPress.h  Log.cpp  Response.cpp  TestCentre.cpp
source/cpp/tests/: TestCommand.cpp  TestComponentSearch.cpp  TestResponse.cpp  main.cpp
source/ts/: app-connection.ts  app-process.ts  assert.ts  binary-protocol.ts  commands.ts  component-handle.ts  connection.ts  index.ts  poll.ts  response-stream.ts  responses.ts  server.ts
tests/: poll-until.spec.ts  response-stream.spec.ts  wait-for-result.spec.ts
